# SDOJ-Recomp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  saidaioujou_recomp_CA022100_functions.toml  saidaioujou_recomp_CA022110_functions.toml  saidaioujou_recomp_functions.toml  saidaioujou_recomp_tu1_manifest.toml
.github/workflows/: build-linux-amd64.yml
launcher/: launch.bat  launch.sh  prepare_game.ps1  prepare_game.sh
src/: exitgame.h  main.cpp  saidaioujou_recomp_tu1_app.h  sdoj_patch_flags.h
